--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -57,9 +57,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Producto"
+                    android:text="@string/tv_product_title_productDetails"
                     android:textColor="@color/colorPrimary"
-                    android:textSize="14sp"
+                    android:textSize="@dimen/subtitle2_font_size"
                     android:gravity="start|center"
                     android:layout_marginTop="24sp"
                     android:layout_marginStart="16sp"
@@ -90,9 +90,9 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:text="Precio"
+                            android:text="@string/tv_price_title_productDetails"
                             android:textColor="@color/colorPrimary"
-                            android:textSize="14sp"
+                            android:textSize="@dimen/subtitle2_font_size"
                             android:gravity="start|center"
                             android:layout_marginStart="16sp"
                             app:drawableLeftCompat="@drawable/ic_baseline_dollar_24"
@@ -103,9 +103,9 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:text="Costo"
+                            android:text="@string/tv_cost_title_productDetails"
                             android:textColor="@color/colorPrimary"
-                            android:textSize="14sp"
+                            android:textSize="@dimen/subtitle2_font_size"
                             android:gravity="start|center"
                             android:layout_marginStart="16sp"
                             app:drawableLeftCompat="@drawable/ic_baseline_dollar_24"
@@ -144,9 +144,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Receta"
+                    android:text="@string/tv_recipe_title_productDetails"
                     android:textColor="@color/colorPrimary"
-                    android:textSize="14sp"
+                    android:textSize="@dimen/subtitle2_font_size"
                     android:gravity="start|center"
                     android:layout_marginTop="24dp"
                     android:layout_marginStart="16dp"
