--- a/app/src/main/res/layout/activity_pin_login.xml
+++ b/app/src/main/res/layout/activity_pin_login.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
@@ -30,7 +29,7 @@
                 android:layout_marginTop="4dp"
                 android:layout_marginEnd="12dp"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:hint="PIN"
+                android:hint="@string/et_pin_hint_login"
                 app:startIconDrawable="@drawable/ic_baseline_lock_24"
                 app:endIconMode="password_toggle"
                 app:counterEnabled="true"
