--- a/app/src/main/res/layout/activity_set_pin_login.xml
+++ b/app/src/main/res/layout/activity_set_pin_login.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
@@ -27,8 +26,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
-                android:text="Establezca su PIN"
-                android:textSize="28sp"
+                android:text="@string/tv_setPin_title_login"
+                android:textSize="@dimen/title_font_size"
                 android:textColor="@color/colorPrimary"
                 android:gravity="center"
                 android:textAllCaps="true" />
@@ -40,7 +39,7 @@
                 android:layout_weight="8"
                 android:layout_marginTop="4dp"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:hint="PIN"
+                android:hint="@string/et_pin_hint_login"
                 app:startIconDrawable="@drawable/ic_baseline_lock_24"
                 app:endIconMode="password_toggle"
                 app:counterEnabled="true"
@@ -61,7 +60,7 @@
                 android:layout_weight="8"
                 android:layout_marginTop="4dp"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:hint="Confirmar PIN"
+                android:hint="@string/et_confirmPin_hint_login"
                 app:startIconDrawable="@drawable/ic_baseline_lock_24"
                 app:endIconMode="password_toggle"
                 app:counterEnabled="true"
@@ -82,7 +81,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_weight="1"
                 android:backgroundTint="@color/colorPrimaryDark"
-                android:text="Guardar"
+                android:text="@string/bt_save_title_login"
                 android:onClick="@{ () -> setPinLoginViewModel.onClickPinLoginListener(pin, confirmPin)}"/>
 
         </androidx.appcompat.widget.LinearLayoutCompat>
