--- a/app/src/main/res/layout/fragment_clients.xml
+++ b/app/src/main/res/layout/fragment_clients.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
@@ -13,7 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
@@ -21,7 +19,7 @@
 
            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
-               android:layout_height="match_parent">
+               android:layout_height="wrap_content">
 
                <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                    android:id="@+id/rvRefresh"
@@ -38,9 +36,10 @@
                            android:layout_marginHorizontal="16dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
-                           android:text="Top 3 Clientes"
+                           android:text="@string/tv_top3_title_clients"
+                           android:textStyle="bold"
                            android:textAllCaps="true"
-                           android:textSize="18sp" />
+                           android:textSize="@dimen/subtitle_font_size" />
 
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_topClients"
@@ -54,9 +53,10 @@
                            android:layout_marginHorizontal="16dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
-                           android:text="Clientes"
+                           android:text="@string/tv_clients_title_clients"
+                           android:textStyle="bold"
                            android:textAllCaps="true"
-                           android:textSize="18sp" />
+                           android:textSize="@dimen/subtitle2_font_size" />
 
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_clients"
@@ -78,7 +78,7 @@
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="72dp"
                    android:src="@drawable/ic_baseline_add_24"
-                   android:contentDescription="Añadir Clientes"
+                   android:contentDescription="@string/contentDescription_addClients"
                    android:onClick="@{() -> clientViewModel.onClickAddClients(context)}"/>
            </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
