--- a/app/src/main/res/layout/fragment_orders.xml
+++ b/app/src/main/res/layout/fragment_orders.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -42,7 +41,7 @@
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginBottom="72dp"
                 android:src="@drawable/ic_baseline_add_24"
-                android:contentDescription="Añadir Clientes"
+                android:contentDescription="@string/contentDescription_addOrder"
                 android:onClick="@{() -> orderViewModel.onClickAddOrder(context)}" />
 
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
