--- a/app/src/main/res/layout/template_client.xml
+++ b/app/src/main/res/layout/template_client.xml
@@ -58,7 +58,7 @@
                 android:gravity="center|start"
                 tools:text="Cliente"
                 android:text="@{clientViewModel.getClientAt(position).name}"
-                android:textSize="20sp" />
+                android:textSize="@dimen/body_font_size" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
     </androidx.appcompat.widget.LinearLayoutCompat>
