--- a/app/src/main/res/layout/template_client_add.xml
+++ b/app/src/main/res/layout/template_client_add.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <variable
@@ -46,7 +45,7 @@
                 android:text="@{clientsAddViewModel.getContactAt(position).name}"
                 tools:text="Contacto"
                 android:textStyle="bold"
-                android:textSize="20sp" />
+                android:textSize="@dimen/subtitle2_font_size" />
 
             <com.google.android.material.textview.MaterialTextView
                 android:layout_width="match_parent"
@@ -54,7 +53,7 @@
                 android:gravity="center|start"
                 android:text="@{clientsAddViewModel.getContactAt(position).phone}"
                 tools:text="Número"
-                android:textSize="18sp" />
+                android:textSize="@dimen/body_font_size" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
     </androidx.appcompat.widget.LinearLayoutCompat>
