--- a/app/src/main/res/layout/template_order_client.xml
+++ b/app/src/main/res/layout/template_order_client.xml
@@ -37,7 +37,7 @@
                 tools:text="#"
                 android:text='@{"#" + clientDetailsViewModel.getOrderAt(position).id}'
                 android:textColor="@color/white"
-                android:textSize="16sp" />
+                android:textSize="@dimen/body_font_size" />
 
         </com.google.android.material.card.MaterialCardView>
 
@@ -57,7 +57,7 @@
                 android:padding="8dp"
                 tools:text="Productos"
                 android:text="@{clientDetailsViewModel.getProductList(position)}"
-                android:textSize="14sp"
+                android:textSize="@dimen/body_font_size"
                 android:textColor="@color/white" />
 
         </com.google.android.material.card.MaterialCardView>
@@ -80,7 +80,7 @@
                 tools:text="S/"
                 android:text='@{"S/" + clientDetailsViewModel.getOrderAt(position).totalPrice}'
                 android:textColor="@color/white"
-                android:textSize="20sp" />
+                android:textSize="@dimen/body_font_size" />
 
         </com.google.android.material.card.MaterialCardView>
     </androidx.appcompat.widget.LinearLayoutCompat>
