--- a/app/src/main/res/layout/template_order_products.xml
+++ b/app/src/main/res/layout/template_order_products.xml
@@ -36,7 +36,7 @@
                 tools:text="Producto"
                 android:text="@{orderDetailsViewModel.getProductAt(position).name}"
                 android:textColor="@color/white"
-                android:textSize="20sp" />
+                android:textSize="@dimen/subtitle2_font_size" />
 
         </com.google.android.material.card.MaterialCardView>
 
@@ -56,7 +56,7 @@
                 android:gravity="center"
                 tools:text="#"
                 android:text="@{orderDetailsViewModel.order.productsQuantity.get(position).toString()}"
-                android:textSize="20sp"
+                android:textSize="@dimen/subtitle2_font_size"
                 android:textColor="@color/white" />
 
         </com.google.android.material.card.MaterialCardView>
@@ -78,7 +78,7 @@
                 tools:text="S/"
                 android:text='@{"S/" + (orderDetailsViewModel.getProductAt(position).price * orderDetailsViewModel.order.productsQuantity.get(position))}'
                 android:textColor="@color/white"
-                android:textSize="20sp" />
+                android:textSize="@dimen/subtitle2_font_size" />
 
         </com.google.android.material.card.MaterialCardView>
     </androidx.appcompat.widget.LinearLayoutCompat>
