--- a/app/src/main/res/menu/menu_clients_edit.xml
+++ b/app/src/main/res/menu/menu_clients_edit.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/confirm_client_edit"
-        android:title="Añadir"
+        android:title="@string/item_confirm_title"
         android:icon="@drawable/ic_baseline_check_24"
         app:showAsAction="ifRoom"/>
 </menu>
