--- a/app/src/main/res/menu/menu_order_add.xml
+++ b/app/src/main/res/menu/menu_order_add.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/confirm_order"
-        android:title="Confirmar"
+        android:title="@string/item_confirm_title"
         android:icon="@drawable/ic_baseline_check_24"
         app:showAsAction="ifRoom"/>
 </menu>
