--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,2 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <dimen name="title_font_size">32sp</dimen>
+    <dimen name="subtitle_font_size">24sp</dimen>
+    <dimen name="subtitle2_font_size">20sp</dimen>
+    <dimen name="body_font_size">18sp</dimen>
+</resources>
